# cv-tool

./: .gitignore  LICENSE  README.md  cv-tool.cabal  cv.md  cv.toml  cv.yaml  default.md  default.tex  stack.yaml
lib/CVTool/: Options.hs  Reader.hs  Readers.hs  Types.hs  Writer.hs  Writers.hs
src/: cv-tool.hs
