name:                cv-tool
version:             0.1.0.0
synopsis:            Makes CVs in many formats from many formats
description:         Please see README.md
homepage:            http://github.com/wbthomason/cv-tool#readme
license:             MIT
license-file:        LICENSE
author:              Wil Thomason
maintainer:          wbthomason@cs.cornell.edu
copyright:           2016 Wil Thomason
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     CVTool.Readers, CVTool.Writers, CVTool.Options, CVTool.Types
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       aeson-better-errors,
                       yaml,
                       htoml,
                       pandoc,
                       bibtex,
                       filepath,
                       bytestring,
                       parsec,
                       text,
                       containers,
                       pandoc-citeproc,
                       scientific,
                       vector,
                       unordered-containers,
                       time
  default-language:    Haskell2010

executable cv-tool
  hs-source-dirs:      src
  main-is:             cv-tool.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       cv-tool,
                       aeson-better-errors,
                       filepath,
                       bytestring,
                       text
  default-language:    Haskell2010

test-suite cv-tool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cv-tool
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wbthomason/cv-tool
